--- a/d012/estilo/style.css
+++ b/d012/estilo/style.css
@@ -52,7 +52,7 @@ section{
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte3);
-    font-size: vw;
+    font-size: 5vw;
 }
 
 section.normal{
