--- a/Exercicios/EX026/mq005/estilos/style.css
+++ b/Exercicios/EX026/mq005/estilos/style.css
@@ -16,9 +16,20 @@ header > h1{
     text-align: center;
 }
 menu{
-    display: block;
+    display: none;
 }
-
+#burguer{
+    background-color: rgb(48,48,49);
+    color: white;
+    display: block;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+#burguer:hover{
+    background-color: white;
+    color: black;
+}
 menu > ul{
     list-style-type: none;
 }
